src/test/ui/issues/issue-37550.rs
const fn x() {
    let t = true;
    let x = || t; //~ ERROR function pointers in const fn are unstable
}

fn main() {}
